remain proper alignment of navbar in mobile view

--- a/WELLCARE CSS/wellcare.css
+++ b/WELLCARE CSS/wellcare.css
@@ -393,7 +393,8 @@ footer {
       display: flex;
       flex-direction: column;
       align-items: center;
-      max-width: 50%;
+      align-content: center;
+  
   }
 }
 /* Vision & Mission Section */
