--- a/wellcare.css
+++ b/wellcare.css
@@ -13,6 +13,7 @@ header {
   color: #fff;
   padding: 1.2rem 2rem;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
